fix: too many bugs on ios

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -223,10 +223,10 @@ a {
 }
 
 .textWrapperL {
-  align-self: flex-start;
+  // align-self: flex-start;
 }
 .textWrapperR {
-  align-self: flex-end;
+  // align-self: flex-end;
 }
 
 .nav {
